core/roboconf-core/src/test/resources/configurations/invalid/conflicting-installers.graph
A {
	alias: A component called A;
	facets: F1, F2;
}

facet F1 {
	installer: f1;
}

facet F2 {
	installer: f2;
}
